msa/k8s/k8s-services/ingress.yml
# ingress-controller 설치 명령어
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.1/deploy/static/provider/aws/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-backend-ingress
  namespace: soldesk
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: my-issuer
spec:
  tls:
    - hosts:
        - "app.j1n00.click" # 설정하려는 도메인 이름. 제외시에 elb주소로도 접근할수 있는 모든 도메인 접근 가능.
      secretName: app-j1n00-click-tls
  rules:
    - host: app.j1n00.click # 설정하려는 도메인 이름. 제외시에 elb주소로도 접근할수 있는 모든 도메인 접근 가능.
      http:
        paths:
          - path: / #모든 url요청을 apigateway-service로 라우팅
            pathType: Prefix
            backend:
              service:
                name: apigateway-service
                port:
                  number: 80
